content/docs/2.5.0/data-variables.adoc
= Data Variables
Jonathan Bullock
2016-10-03
:jbake-type: page
:jbake-tags: documentation
:jbake-status: published
:idprefix:

== Data Model

A data model is exposed to each of the templates (regardless of what template engine you use) allowing you to get access to the data parsed from within 
the content files, the model can also be used to apply logic to the output from the templates.

=== Global

These data variables are available to all templates regardless.

- `version` = version of JBake being used
- `published_date` = date baking took place
- `[type]s` = collection of all content of [type] (e.g. posts = all content of type=post or snippets = all content of type=snippet)
- `published_content` = collection of all published content (regardless of the type)
- `published_posts` = collection of just published posts in date descending order
- `published_pages` = collection of just published pages in date descending order
- `all_content` = collection of all content (regardless of type)
- `alltags` = collection of all tags used across all published content
- `content.rootpath` = path to root of project (to be used for relative path to assets)
- `config.[option]` = map of configuration data

All the configuration options are available with any `.` in the property being replaced with `_`.
For example `template.index.file=index.ftl` is available via `config.template_index_file`.

In your templates you can loop through any of the collections above in the templates, and access a map of values for each element like so: `content.[value]` 
all of the metadata header fields are available such as `content.title` along with the body of the content file `content.body`.

=== Page / Post / Custom

These predefined templates as well as any custom templates you create yourself have the following data available to them:

- `content.[value]` = map of file contents

All of the metadata header fields are available such as `content.title` and the body of the file is available via `content.body`.

In the map you also have access to:

- `content.file` = the full path to the source file
- `content.uri` = the URI for the baked file

=== Index

This predefined template has the following extra data variables available to it related to paging:

- `nextFileName` = if this variable exists it provides the filename of the next page
- `previousFileName` = if this variable exists it provides the filename of the previous page

These variables allow you provide next and previous links in your template to navigate through the pages.

NOTE: As indicated, these variables may not exist so you should check first before referring to it.

=== Tags

This predefined template has the following extra data available to it:

- `tag` = tag being rendered
- `tag_posts` = collection of published posts for tag in date descending order
